welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:8: error: expected class or object definition
def faireV() {
^PictureMono1:18: error: expected start of definition
override def run() {
         ^PictureMono1:24: error: Unmatched closing brace '}' ignored here
}
^