welcome.lessons.welcome.methods.picture.PictureMono1.scala.code
def marquerSol() {
  avance();
  baisseBrosse();
  avance();
  leveBrosse();
  }
}
def faireV() {
  avance();
  marquerSol();
  gauche();
  marquerSol();
  droite();
  marquerSol();
  avance();
  gauche();
}
override def run() {
  for (compteur <- 1 to 4) {
    faireV();
  }
}